<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:src="@drawable/sol"
        android:layout_marginBottom="20dp">
    </ImageView>

    <TextView
        android:id="@+id/txtOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Qn"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLearned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optn1"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btnToLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optn2"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optn3"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optn4"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>